    uploading and downloading JCR content
  - Support for username and password for remote JCR repository access
- Fleshed out ValidationError functionality including display in apps.xml
  and considering the ec.message.validationErrors list for storing error
  details in session between redirects, and changed entity and service
  validation to add ValidationErrors instead of plain error Strings
- Screen in Tools app for SQL Query Run/View
- Improved classpath overrides for configuration and such in the
  runtime/classes directory for both add-runtime/addRuntime and executable
  WAR file deployment approaches

Non-backward-compatible changes:

- Removed id-very-long entity field type and increased default length of id
  type to 40 and id-long type to 255.
- Changed *SubscreensItem.userId* to *userGroupId* for greater flexibility
  setting up subscreen structures and menus
-- this is consistent with how other database-driven artifacts are
   structured
-- to have a record apply to all users use the ALL_USERS userGroupId that
   all users are automatically a member of
-- for migrating other data a user will have to be a member of a group and
   that group can be a single-user group or you can simplify existing data
   by consolidating users into groups that have the same subscreens

Bug Fixes:

- Fixed bug where secondary sequenced ID (setSequencedIdSecondary() method)
  was not finding IDs of existing records causing conflicting IDs to be
  generated
- Fixed bug with EntityFindBase.updateAll() to not use EntityListIterator
  as it caused problems trying to update records with the ResultSet open
- Added support for @confirmation attribute for hidden-form type links
- Fixed issue where transition.path-parameter values were not making it
  into the context since parameters were already added to the context
- Fixed issue in Data View screen with related entities using the full
  entity name (name with package)