@@ -370,11 +370,11 @@ class ScreenDefinition {
 
             ResponseItem ri = null
             // if there is an error-response and there are errors, we have a winner
-            if (sri.ec.message.errors && errorResponse) ri = errorResponse
+            if (sri.getEc().getMessage().hasError() && errorResponse) ri = errorResponse
 
             // check all conditional-response, if condition then return that response
             if (ri == null) for (ResponseItem condResp in conditionalResponseList) {
-                if (condResp.checkCondition(sri.ec)) ri = condResp
+                if (condResp.checkCondition(sri.getEc())) ri = condResp
             }
             // no errors, no conditionals, return default
             if (ri == null) ri = defaultResponse
